<resources>
    <string name="app_name">MembersOnly</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="member_name">Member Name</string>
    <string name="member_gender">Member\'s Gender</string>
    <string name="membership_start_date">Membership Start Date</string>
    <string name="birthday">Birthday</string>
    <string name="back_button">Back Button</string>
    <string name="delete_member">Delete Member!</string>
    <string name="password_old">Password Old</string>
    <string name="new_username_optional">New Username</string>
    <string name="commit_changes">Commit Changes</string>
    <string name="membership_constant">Joined %s</string>
    <string name="birthday_constant">Birthday: %s</string>
    <string name="add_new_member">Add New Member</string>
    <string-array name="membership_levels">
        <item>REGULAR</item>
        <item>GOLD</item>
        <item>PLATINUM</item>
    </string-array>
    <string-array name="gender_options">
        <item>Prefer Not to Say</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>